--- a/guide_naturel/test.html
+++ b/guide_naturel/test.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Le Guide Naturel</title>
-  <link href = "index.css" rel = "stylesheet">
+    <meta charset="UTF-8">
+    <title>Carte Bourgogne-Franche-Comté</title>
 </head>
 <body>
-<div align = CENTER class = "BFC">
-  <h2>
-BOURGOGNE-FRANCHE-COMTÉ </h2></div>
-<div align = CENTER class = "LeGuideNaturel">
-  <h1>
-  LE GUIDE NATUREL</h1>
-</div>
-<div align = CENTER>
-<button class = "Recherche">RECHERCHE</button>
-  <button class = "Stat">STATISTIQUES</button>
-  <button class = "AjoutDonnees">AJOUT DONNÉES</button>
-</div>
-<div align = CENTER class = "CarteBFC">
-
-    <img src = "carte_bfc.png" alt = "Departement BFC" usemap = '#departements_bfc'>
+  <h1>Carte interactive des départements de Bourgogne-Franche-Comté</h1>
+  <img src = "carte_bfc.png" alt = "Departement BFC" usemap = '#departements_bfc'>
   <map name = 'departements_bfc'>
     <area
             shape="poly"
@@ -70,10 +56,5 @@ BOURGOGNE-FRANCHE-COMTÉ </h2></div>
             target="_blank"
             alt="Territoire de Belfort">
   </map>
-
-</div>
 </body>
 </html>
-
-
-
