--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>Le Guide Naturel</title>
@@ -19,61 +19,83 @@ BOURGOGNE-FRANCHE-COMTÉ </h2></div>
   <button class = "AjoutDonnees">AJOUT DONNÉES</button>
 </div>
 <div align = CENTER class = "CarteBFC">
-
-    <img src = "carte_bfc.png" alt = "Departement BFC" usemap = '#departements_bfc'>
+  <div class="image-container"> <!-- Ajout du container pour l'image -->
+    <img src = "ressources/carte_bfc.png" alt = "Departement BFC" usemap = '#departements_bfc' class = 'BFCcarte'>
+    <img src="ressources/dep/cote_dor.png" alt="Côte-d'Or" class="overlay-image">
+    </div>
   <map name = 'departements_bfc'>
     <area
             shape="poly"
             coords="423,375,476,251,466,199,391,195,350,128,299,63,221,61,192,117,220,181,177,261,198,305,277,334,307,315,325,345,376,359"
             href="#"
             target="_blank"
-            alt="Yonne">
+            alt="Yonne" class="departement-area yonne"> <!-- Ajout de classes pour cibler CSS -->
     <area
             shape="poly"
             coords="306,308,301,323,256,329,227,303,176,310,191,338,178,371,199,390,209,445,215,503,208,540,243,574,289,559,294,582,323,553,357,551,369,566,418,537,414,477,417,439,450,427,448,405,430,402,432,371,410,381,398,363,351,352"
             href="#"
             target="_blank"
-            alt="Nièvre">
+            alt="Nièvre" class="departement-area nievre">
     <area
             shape="poly"
             coords="662,294,605,265,605,233,579,191,525,166,519,187,469,188,470,252,457,258,418,353,449,413,433,434,456,435,546,502,618,481,667,476,698,437,711,370,689,337,709,313,697,292"
             href="#"
             target="_blank"
-            alt="Côte-d'Or">
+            alt="Côte-d'Or"
+            class="departement-area cote-dor">
     <area
             shape="poly"
             coords="539,491,523,479,499,460,470,434,419,441,416,494,414,540,368,561,332,553,353,617,404,642,379,713,467,731,487,690,545,697,561,727,598,621,645,630,671,649,699,634,686,606,699,585,683,534,705,526,660,479,613,483,549,504"
             href="#"
             target="_blank"
-            alt="Saône-et-Loire">
+            alt="Saône-et-Loire" class="departement-area saone-et-loire">
     <area
             shape="poly"
             coords="905,209,889,190,854,198,832,171,746,235,747,279,682,286,705,294,708,315,687,336,711,390,749,403,777,387,803,380,821,369,855,353,877,327,915,330,946,312,974,311,962,251,980,234,926,191"
             href="#"
             target="_blank"
-            alt="Haute-Saône">
+            alt="Haute-Saône" class="departement-area haute-saone">
     <area
             shape="poly"
             coords="949,305,925,328,882,318,856,351,800,378,764,393,753,398,774,432,762,467,803,477,819,513,849,542,821,576,836,607,906,542,911,488,981,432,999,401,1019,363,990,364,993,336,1000,322,975,313"
             href="#"
             target="_blank"
-            alt="Doubs">
+            alt="Doubs" class="departement-area doubs">
     <area
             shape="poly"
             coords="764,469,774,431,745,396,713,388,698,432,669,459,661,483,702,522,677,533,698,577,683,616,696,623,675,645,710,700,741,676,759,693,791,698,832,641,842,611,822,591,830,566,850,551,841,529,821,520,806,481,781,469"
             href="#" target="_blank"
-            alt="Jura">
+            alt="Jura" class="departement-area jura">
     <area
             shape="poly"
             coords="1015,289,1019,271,1016,251,978,231,964,258,971,286,978,307,999,324,993,339,1003,345,1013,335,1013,323,1033,324,1039,314,1032,294"
             href="#"
             target="_blank"
-            alt="Territoire de Belfort">
+            alt="Territoire de Belfort" class="departement-area territoire-de-belfort">
   </map>
 
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const coteDorArea = document.querySelector('area.cote-dor'); // Sélectionne l'area Côte-d'Or par sa classe
+    const overlayImage = document.querySelector('.overlay-image'); // Sélectionne l'image de superposition
+
+    if (coteDorArea && overlayImage) { // Vérifie que les éléments existent bien
+      coteDorArea.addEventListener('mouseover', function() {
+        overlayImage.style.opacity = 1; // Affiche l'image quand la souris est sur l'area
+      });
+
+      coteDorArea.addEventListener('mouseout', function() {
+        overlayImage.style.opacity = 0; // Cache l'image quand la souris quitte l'area
+      });
+    } else {
+      console.error("Erreur : Element(s) non trouvé(s) (area.cote-dor ou .overlay-image). Vérifiez vos sélecteurs.");
+    }
+  });
+</script>
 </body>
 </html>
 
-
-
+</body>
+</html>
