--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -8,20 +8,21 @@
 <body>
 <div align = CENTER class = "BFC">
   <h2>
-BOURGOGNE-FRANCHE-COMTÉ </h2></div>
+B O U R G O G N E - F R A N C H E - C O M T É </h2></div>
 <div align = CENTER class = "LeGuideNaturel">
   <h1>
   LE GUIDE NATUREL</h1>
 </div>
 <div align = CENTER>
-<button class = "Recherche">RECHERCHE</button>
-  <button class = "Stat">STATISTIQUES</button>
-  <button class = "AjoutDonnees">AJOUT DONNÉES</button>
+<button onclick="location.href='recherche/recherche.html'" class = "Recherche">RECHERCHE</button>
+  <button onclick="location.href='statistiques/statistiques.html'" class = "Stat">STATISTIQUES</button>
+  <button onclick="location.href='ajoutdonnees/ajoutdonnees.html'" class = "AjoutDonnees">AJOUT DONNÉES</button>
 </div>
 <div align = CENTER class = "CarteBFC">
   <div class="image-container">
     <img src = "ressources/carte_bfc.png" alt = "Departement BFC" usemap = '#departements_bfc' class = 'BFCcarte'>
     <img src="" alt="" class="overlay-image">
+    <img src="" alt="" class="overlay-text">
     </div>
   <map name = 'departements_bfc'>
     <area
@@ -68,6 +69,8 @@ BOURGOGNE-FRANCHE-COMTÉ </h2></div>
   </map>
 
 </div>
+
+
 
 <script src="script.js"></script>
 
