--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -16,7 +16,7 @@ B O U R G O G N E - F R A N C H E - C O M T É </h2></div>
 <div align = CENTER>
 <button onclick="location.href='recherche/recherche.html'" class = "Recherche">RECHERCHE</button>
   <button onclick="location.href='statistiques/statistiques.html'" class = "Stat">STATISTIQUES</button>
-  <button onclick="location.href='ajoutdonnees/ajoutdonnees.html'" class = "AjoutDonnees">AJOUT DONNÉES</button>
+  <button onclick="location.href='ajoutdonnees/ajoutdonnees.html'" class = "AjoutDonnees">A PROPOS DE NOUS !</button>
 </div>
 <div align = CENTER class = "CarteBFC">
   <div class="image-container">
