--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -5,7 +5,7 @@
   <title>Le Guide Naturel</title>
   <link href = "index.css" rel = "stylesheet">
 </head>
-<body>
+<body class = "index">
 <div align = CENTER class = "BFC">
   <h2>
 B O U R G O G N E - F R A N C H E - C O M T É </h2></div>
@@ -14,9 +14,9 @@ B O U R G O G N E - F R A N C H E - C O M T É </h2></div>
   LE GUIDE NATUREL</h1>
 </div>
 <div align = CENTER>
-<button onclick="location.href='recherche/recherche.html'" class = "Recherche">EXPLORE AVEC ANNA</button>
-  <button onclick="location.href='statistiques/statistiques.html'" class = "Stat">STATISTIQUES</button>
-  <button onclick="location.href='ajoutdonnees/ajoutdonnees.html'" class = "AjoutDonnees">A PROPOS DE NOUS !</button>
+<button onclick="location.href='recherche.html'" class = "Recherche">EXPLORE AVEC ANNA</button>
+  <button onclick="location.href='statistiques.html'" class = "Stat">STATISTIQUES</button>
+  <button onclick="location.href='ajoutdonnees.html'" class = "AjoutDonnees">A PROPOS DE NOUS !</button>
 </div>
 <div align = CENTER class = "CarteBFC">
   <div class="image-container">
