--- a/guide_naturel/front/statistiques.html
+++ b/guide_naturel/front/statistiques.html
@@ -14,7 +14,7 @@ B O U R G O G N E - F R A N C H E - C O M T É </h2></div>
   LE GUIDE NATUREL</h1>
 </div>
 <div align = CENTER>
-<button onclick="location.href='recherche.html'" class = "Recherche">EXPLORE AVEC ANNA</button>
+<button onclick="location.href='recherche.html'" class = "Recherche">EXPLORE AVEC ANNA !</button>
   <button onclick="location.href='index.html'" class = "Stat">ACCUEIL</button>
   <button onclick="location.href='ajoutdonnees.html'" class = "AjoutDonnees">A PROPOS DE NOUS !</button>
 </div>
