--- a/guide_naturel/front/apropos.html
+++ b/guide_naturel/front/apropos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-Ajout données
+<body class = "apropos">
+A propos de nous !
 </body>
 </html>
