--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -89,19 +89,21 @@
   </map>
 
 </div>
-
- <div class="main-content">
-        <div class="Carte">
-            <!-- Ton code de carte ici (inchangé) -->
-        </div>
-        <div class="contenu-droite">
-            <!-- Vide pour l’instant -->
-        </div>
+       <div class="contenu-droite">
+  <canvas id="camembert"></canvas>
+  <div class="buttons_right">
+    <button onclick="location.href='recherche.html'" class="button_right1">Nombre d'espèces par règne</button>
+    <button onclick="location.href='recherche.html'" class="button_right1">Nombre d'espèces dans chaque règne</button>
+    <button onclick="location.href='recherche.html'" class="button_right1">Statuts de conservation par règne</button>
+      <button onclick="location.href='recherche.html'" class="button_right1">Nombre de groupes taxonomiques par règne</button>
+    <button onclick="location.href='recherche.html'" class="button_right1">Nombre d'espèces par statut de conservation</button>
+  </div>
+</div>
     </div>
         </div>
-</div>
 <script src="script.js"></script>
 <script src="https://unpkg.com/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <div id="info-box"></div>
 
