--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -6,6 +6,8 @@
   <link href = "index.css" rel = "stylesheet">
 </head>
 
+<body class = "index">
+
 <header class="header">
   <img src="ressources/eseo_logo.png" class="header_logo" alt="Logo">
   <div class="header_center">
@@ -16,7 +18,6 @@
 </header>
 
 
-<body class = "index">
 
 <div class="container">
 
@@ -107,10 +108,9 @@
 
 <div id="info-box"></div>
 
-</body>
 
 
-<footer>
+<footer class="footer">
     <div class="footer-container">
         <div class="footer-item">
             <img src="ressources/footer/recherche.png" alt="Analyse">
@@ -132,4 +132,6 @@
         </div>
     </div>
 </footer>
+</body>
+
 </html>
