--- a/guide_naturel/front/recherche.html
+++ b/guide_naturel/front/recherche.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
+  <title>Le Guide Naturel de la BFC</title>
+  <link href="global.css" rel="stylesheet">
+    <link href="recherche.css" rel="stylesheet">
 </head>
-<body class = "recherche">
-Recherche
+
+<body class="recherche">
+
+<div id="header-placeholder"></div>
+
+<main class="container"> <!-- <main> pour le contenu principal de la page -->
+
+  <div class="text-container">
+      <!-- Utilisation de balises de titre sémantiques -->
+      <h2 class="bfc_subtitle">B O U R G O G N E - F R A N C H E - C O M T É</h2>
+      <h1 class="bfc_title">LE GUIDE NATUREL</h1>
+  </div>
+
+
+</main> <!-- Fin de .container / <main> -->
+
+
+
+ <div id="footer-placeholder"></div>
+
+<script src="script_recherche.js"></script>
+<script src="https://unpkg.com/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="app.js"></script>
+
 </body>
 </html>
