--- a/guide_naturel/front/apropos.html
+++ b/guide_naturel/front/apropos.html
@@ -12,10 +12,9 @@
 
 <div id="header-placeholder"></div>
 
-<main class="container"> <!-- <main> pour le contenu principal de la page -->
+<main class="container">
 
   <div class="text-container">
-      <!-- Utilisation de balises de titre sémantiques -->
       <h2 class="bfc_subtitle">B O U R G O G N E - F R A N C H E - C O M T É</h2>
       <h1 class="bfc_title">LE GUIDE NATUREL</h1>
   </div>
@@ -23,21 +22,21 @@
         <section class="team-introduction section-padding">
             <h2 class = "h2_apropos">Qui sommes-nous ?</h2>
             <div class="team-members">
-                <!-- Membre 1 -->
+                <!-- Mathis -->
                 <div class="team-member">
                     <img src="ressources/team/mathis.jpg" alt="Photo de Mathis" class="team-photo">
                     <h3>Mathis</h3>
                     <p class="member-role">Gestionnaire de la base de données et Back-End</p>
                 </div>
-                <!-- Membre 2 -->
+                <!-- Maeva -->
                 <div class="team-member">
                     <img src="ressources/team/maeva.jpg" alt="Photo de Maeva" class="team-photo">
                     <h3>Maeva</h3>
                     <p class="member-role">Gestionnaire du Front-End et Back-End</p>
                 </div>
-                <!-- Membre 3 -->
+                <!-- Jordan -->
                 <div class="team-member">
-                    <img src="ressources/team/jordan.jpg" alt="Photo de Jordan" class="team-photo">
+                    <img src="ressources/team/jordan.png" alt="Photo de Jordan" class="team-photo">
                     <h3>Jordan</h3>
                     <p class="member-role">Gestionnaire des recherches</p>
                 </div>
@@ -57,7 +56,6 @@
             <p class = "questions">Si vous avez des questions, des suggestions ou si vous souhaitez simplement en savoir plus sur notre projet, n'hésitez pas à nous contacter. Nous serions ravis d'échanger avec vous !</p>
             <div class="contact-methods">
                 <p>
-                    <!-- Optionnel: Utiliser des icônes Font Awesome ou SVG ici -->
                     Email : <a href="mailto:maeva.ramamonjyramboa@reseau.eseo.fr">equipe.guidebfc@reseau.eseo.fr</a>
                 </p>
 
