--- a/guide_naturel/front/recherche.html
+++ b/guide_naturel/front/recherche.html
@@ -12,16 +12,15 @@
 
 <div id="header-placeholder"></div>
 
-<main class="container"> <!-- <main> pour le contenu principal de la page -->
+<main class="container">
 
   <div class="text-container">
-      <!-- Utilisation de balises de titre sémantiques -->
       <h2 class="bfc_subtitle">B O U R G O G N E - F R A N C H E - C O M T É</h2>
       <h1 class="bfc_title">LE GUIDE NATUREL</h1>
   </div>
 
 
-</main> <!-- Fin de .container / <main> -->
+</main>
 
 
 
