--- a/guide_naturel/front/header.html
+++ b/guide_naturel/front/header.html
@@ -1,8 +1,13 @@
 <header class="header">
+
   <img src="ressources/eseo_logo.png" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
-  <nav class="header_center"> <!-- Utilisation de <nav> pour un groupe de liens de navigation -->
+
+  <nav class="header_center">
+
     <a href="index.html" class="button_base header_button">ACCUEIL</a>
     <a href="recherche.html" class="button_base header_button">EXPLORE AVEC ANNA !</a>
     <a href="apropos.html" class="button_base header_button">A PROPOS DE NOUS !</a>
+
   </nav>
+
 </header>
