--- a/guide_naturel/front/recherche.html
+++ b/guide_naturel/front/recherche.html
@@ -25,10 +25,11 @@
     <div class="chatbot-container">
         <div id="chat-log" class="chat-log-area">
         </div>
-        <div class="chat-input-area">
-            <input type="text" id="chat-input" placeholder="Tapez votre réponse ici..." disabled>
-            <button id="send-chat-button" disabled>Envoyer</button>
-        </div>
+<div class="chat-input-area">
+    <input type="text" id="chat-input" placeholder="Tapez votre réponse ici..." disabled>
+    <button id="send-chat-button" disabled>Envoyer</button>
+    <button id="skip-chat-button" disabled>Je ne sais pas</button> <!-- NOUVEAU BOUTON -->
+</div>
     </div>
 
     <div class="chatbot-results">
