--- a/guide_naturel/front/apropos.html
+++ b/guide_naturel/front/apropos.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
-  <title>Le Guide Naturel de la BFC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Découvrez l'équipe et la mission du Guide Naturel de la BFC">
+    <title>A propos - Le Guide Naturel de la BFC</title>
   <link href="global.css" rel="stylesheet">
     <link href="apropos.css" rel="stylesheet">
 </head>
@@ -24,19 +25,19 @@
             <div class="team-members">
                 <!-- Mathis -->
                 <div class="team-member">
-                    <img src="ressources/team/mathis.jpg" alt="Photo de Mathis" class="team-photo">
+                    <img src="ressources/team/mathis.webp" alt="Photo de Mathis" class="team-photo">
                     <h3>Mathis</h3>
                     <p class="member-role">Gestionnaire de la base de données et Back-End</p>
                 </div>
                 <!-- Maeva -->
                 <div class="team-member">
-                    <img src="ressources/team/maeva.jpg" alt="Photo de Maeva" class="team-photo">
+                    <img src="ressources/team/maeva.webp" alt="Photo de Maeva" class="team-photo">
                     <h3>Maeva</h3>
                     <p class="member-role">Gestionnaire du Front-End et Back-End</p>
                 </div>
                 <!-- Jordan -->
                 <div class="team-member">
-                    <img src="ressources/team/jordan.png" alt="Photo de Jordan" class="team-photo">
+                    <img src="ressources/team/jordan.webp" alt="Photo de Jordan" class="team-photo">
                     <h3>Jordan</h3>
                     <p class="member-role">Gestionnaire des recherches</p>
                 </div>
@@ -46,8 +47,8 @@
         <section class="project-mission section-padding">
             <h2 class = "h2_apropos">Notre Mission</h2>
             <div class="mission-text">
-                <p>Nous sommes une équipe de <a>trois étudiants dynamiques de l'ESEO Dijon</a>, unis par notre attrait pour la nature. Ce site, dans le cadre de notre projet Big Data, est le fruit de notre travail et de notre désir de partager la richesse de la faune et la flore de notre belle région, la Bourgogne-Franche-Comté.</p>
-                <p>Notre objectif principal était de créer une <a>plateforme ludique et éducative</a>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
+                <p>Nous sommes une équipe de <b>trois étudiants dynamiques de l'ESEO Dijon</b>, unis par notre attrait pour la nature. Ce site, dans le cadre de notre projet Big Data, est le fruit de notre travail et de notre désir de partager la richesse de la faune et la flore de notre belle région, la Bourgogne-Franche-Comté.</p>
+                <p>Notre objectif principal était de créer une <b>plateforme ludique et éducative</b>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
             </div>
         </section>
 
