--- a/guide_naturel/front/header.html
+++ b/guide_naturel/front/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 
-  <img src="ressources/eseo_logo.png" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
+  <img src="ressources/eseo_logo.webp" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
 
   <nav class="header_center">
 
