--- a/guide_naturel/front/index.html
+++ b/guide_naturel/front/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
-  <title>Le Guide Naturel de la BFC</title>
+  <meta name="description" content="Recherchez ce que vous voulez en BFC">
+  <title>Accueil - Le Guide Naturel de la BFC</title>
   <link href="global.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
 </head>
@@ -25,7 +26,7 @@
 
       <div class="image-container">
 
-        <img src="ressources/carte_bfc.png" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
+        <img src="ressources/carte_bfc.webp" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
         <!-- Mises à jour par index.js au survol des départements -->
         <img src="" alt="" class="overlay-image">
         <img src="" alt="" class="overlay-text">
