--- a/guide_naturel/front/footer.html
+++ b/guide_naturel/front/footer.html
@@ -4,7 +4,7 @@
 
         <div class="footer-item">
 
-            <img src="ressources/footer/stats.png" alt="Icône graphique pour statistiques">
+            <img src="ressources/footer/stats.webp" alt="Icône graphique pour statistiques">
             <p>Veux-tu des statistiques</p>
             <p>précises sur la région ?</p>
             <a href="index.html" id="footerBtnAccueil" class="button_base footer_button">ACCUEIL</a>
@@ -13,7 +13,7 @@
 
         <div class="footer-item">
 
-            <img src="ressources/footer/recherche.png" alt="Icône loupe pour recherche">
+            <img src="ressources/footer/recherche.webp" alt="Icône loupe pour recherche">
             <p>Recherche ce que tu veux</p>
             <p>avec Anna !</p>
             <a href="recherche.html" id="footerBtnRecherche" class="button_base footer_button">EXPLORE AVEC ANNA !</a>
@@ -22,7 +22,7 @@
 
         <div class="footer-item">
 
-            <img src="ressources/footer/team.png" alt="Icône équipe">
+            <img src="ressources/footer/team.webp" alt="Icône équipe">
             <p>Pour en savoir plus sur</p>
             <p>les créateurs du site !</p>
             <a href="apropos.html" id="footerBtnApropos" class="button_base footer_button">A PROPOS DE NOUS !</a>
