--- a/guide_naturel/front/apropos.html
+++ b/guide_naturel/front/apropos.html
@@ -48,7 +48,7 @@
             <h2 class = "h2_apropos">Notre Mission</h2>
             <div class="mission-text">
                 <p>Nous sommes une équipe de <b>trois étudiants dynamiques de l'ESEO Dijon</b>, unis par notre attrait pour la nature. Ce site, dans le cadre de notre projet Big Data, est le fruit de notre travail et de notre désir de partager la richesse de la faune et la flore de notre belle région, la Bourgogne-Franche-Comté.</p>
-                <p>Notre objectif principal était de créer une <b>plateforme ludique et éducative</b>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
+                <p>Notre objectif principal a été de créer une <b>plateforme ludique et éducative</b>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
             </div>
         </section>
 
